chore: 使用Prettier格式化代码
Signed-off-by: crrashh1542 <kotsuki@crrashh.com>

--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -6,7 +6,6 @@
 // 字体
 @wu-font-family: 'Google Sans', 'iconfont';
 
-
 // 颜色
 @import url('./color.less'); // 主题颜色
 @wu-color-bar: @wu-color-theme-bg;
@@ -15,4 +14,4 @@
 
 // 布局
 @wu-layout-nav-height: 64px;
-@wu-icon-spacing: .4em;
+@wu-icon-spacing: 0.4em;
