--- a/src/assets/styles/adaption.less
+++ b/src/assets/styles/adaption.less
@@ -3,26 +3,42 @@
  * Date: 2023-10-02 / Version: 1.1 / Author: crrashh1542
  */
 
-@media screen and (max-width: 800px) { /* <=800px */
-    .appbar, .banner, .footer, main {
-        --container-padding: 20px;
-    }
+@media screen and (max-width: 800px) {
+   /* <=800px */
+   .appbar,
+   .banner,
+   .footer,
+   main {
+      --container-padding: 20px;
+   }
 }
 
-@media screen and (min-width: 800px) { /* <=1024px && >800px */
-    .appbar, .banner, .footer, main {
-        --container-padding: 50px;
-    }
+@media screen and (min-width: 800px) {
+   /* <=1024px && >800px */
+   .appbar,
+   .banner,
+   .footer,
+   main {
+      --container-padding: 50px;
+   }
 }
 
-@media screen and (min-width: 1250px) { /* >1250px && <=1500px */
-    .appbar, .banner, .footer, main {
-        --container-padding: 10%;
-    }
+@media screen and (min-width: 1250px) {
+   /* >1250px && <=1500px */
+   .appbar,
+   .banner,
+   .footer,
+   main {
+      --container-padding: 10%;
+   }
 }
 
-@media screen and (min-width: 1500px) { /* >1500px */
-    .appbar, .banner, .footer, main {
-        --container-padding: 15%;
-    }
+@media screen and (min-width: 1500px) {
+   /* >1500px */
+   .appbar,
+   .banner,
+   .footer,
+   main {
+      --container-padding: 15%;
+   }
 }
