--- a/src/styles/adaption.less
+++ b/src/styles/adaption.less
@@ -5,40 +5,28 @@
 
 @media screen and (max-width: 800px) {
    /* <=800px */
-   .appbar,
-   .banner,
-   .footer,
-   main {
+   .appbar,.banner,.footer, main {
       --container-padding: 20px;
    }
 }
 
 @media screen and (min-width: 800px) {
    /* <=1024px && >800px */
-   .appbar,
-   .banner,
-   .footer,
-   main {
+   .appbar, .banner, .footer, main {
       --container-padding: 50px;
    }
 }
 
 @media screen and (min-width: 1250px) {
    /* >1250px && <=1500px */
-   .appbar,
-   .banner,
-   .footer,
-   main {
+   .appbar, .banner, .footer, main {
       --container-padding: 10%;
    }
 }
 
 @media screen and (min-width: 1500px) {
    /* >1500px */
-   .appbar,
-   .banner,
-   .footer,
-   main {
+   .appbar, .banner, .footer, main {
       --container-padding: 15%;
    }
 }
