--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -7,7 +7,7 @@
 @wu-font-family: 'Google Sans', 'iconfont';
 
 // 颜色
-@import url('./color.less'); // 主题颜色
+@import url('@s/color.less'); // 主题颜色
 @wu-color-bar: @wu-color-theme-bg;
 @wu-color-link-icon: #bbb;
 @wu-color-split-line: #e2e2e2;
