--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
 /* 此样式表用于全局的主题设定
  * Date: 2023-08-23 / Version: 1.1.0 / Author: crrashh1542
  */
-@import url('./color.less');
+@import url('@s/color.less');
 
 .color-theme .category {
    color: @wu-color-theme;
