--- a/src/styles/color.less
+++ b/src/styles/color.less
@@ -1,15 +1,12 @@
 @charset 'utf-8';
 /* 此样式表用于全局的颜色设定
- * Date: 2023-12-22 / Version: 1.2 / Author: crrashh1542
+ * Date: 2024-08-29 / Version: 1.3
  */
 
-// 主题颜色
-@wu-color-theme: #5296ff;
-@wu-color-theme-dark: #3c61a2;
-@wu-color-theme-darker: #314a77;
-@wu-color-theme-light: #9ab7ff;
-@wu-color-theme-lighter: #e8edff;
-@wu-color-theme-bg: rgba(247, 249, 255, 0.8);
+// 主要布局颜色
+@wu-color-base: #f5f5f5; // 上、左侧边栏底色
+@wu-color-main: #fbfbfb; // 主内容底色
+@wu-color-border: #e5e5e5; // 主内容边框
 
 // 其它颜色，部分借鉴自 Material Design 设计指南
 @wu-color-yellow: #ffeb3b;
@@ -19,6 +16,7 @@
 @wu-color-orange: #ff5722;
 @wu-color-green: #8bc94a;
 @wu-color-teal: #00897b;
+@wu-color-blue: #5296ff;
 @wu-color-purple: #7e57c2;
 @wu-color-text-imp: #303030;
 @wu-color-text-accent: #5f5f5f;
