--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,17 +1,10 @@
 @charset 'utf-8';
 /* 此样式表用于全局的变量设定
- * Date: 2023-12-31 / Version: 1.4
+ * Date: 2024-08-29 / Version: 2.0-dev
  */
 
 // 字体
-@wu-font-family: 'Google Sans', 'iconfont';
+@wu-font-family: 'iconfont';
 
 // 颜色
-@import url('@s/color.less'); // 主题颜色
-@wu-color-bar: @wu-color-theme-bg;
-@wu-color-link-icon: #bbb;
-@wu-color-split-line: #e2e2e2;
-
-// 布局
-@wu-layout-nav-height: 64px;
-@wu-icon-spacing: 0.4em;
+@import url('./color.less');
