--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,11 +1,11 @@
 @charset 'utf-8';
 /* 此样式表用于全局的主题设定
- * Date: 2023-08-23 / Version: 1.1.0 / Author: crrashh1542
+ * Date: 2024-08-29 / Version: 1.2
  */
 @import url('@s/color.less');
 
 .color-theme .category {
-    color: @wu-color-theme;
+    color: @wu-color-blue;
 }
 .color-amber .category {
     color: @wu-color-amber;
