chore: 小改样式表
* 将 wu-color-blue 的颜色调整得更深，让侧栏选中后配色不至于那么奇怪。
* 在 reset 中添加一些常用类

Signed-off-by: crrashh1542 <kotsuki@crrashh.com>
(cherry picked from commit ebc5e134487da15547b4a0621ed9266572ddfc0b)

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -11,4 +11,8 @@
 // 文档流初始化
 body {
     background-color: @wu-color-base;
+    a { text-decoration: none; }
 }
+
+// 常用类，类名以“u-”开头
+.u-grow { flex-grow: 1; }
