--- a/src/styles/color.less
+++ b/src/styles/color.less
@@ -16,7 +16,7 @@
 @wu-color-orange: #ff5722;
 @wu-color-green: #8bc94a;
 @wu-color-teal: #00897b;
-@wu-color-blue: #5296ff;
+@wu-color-blue: #3078e2;
 @wu-color-purple: #7e57c2;
 @wu-color-text-imp: #303030;
 @wu-color-text-accent: #5f5f5f;
