style: 统一显示字体
采用的字体暂定：'Segoe UI Variable Display', 'Inter', 'Google Sans', '微软雅黑'

Signed-off-by: crrashh1542 <kotsuki@crrashh.com>

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -4,7 +4,7 @@
  */
 
 // 字体
-@wu-font-family: 'iconfont';
+@wu-font-family: 'Segoe UI Variable Display', 'Inter', 'Google Sans', '微软雅黑';
 
 // 颜色
 @import url('./color.less');
