refactor: [view] 重构NotFound
Signed-off-by: crrashh1542 <kotsuki@crrashh.com>

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -7,7 +7,7 @@
 @wu-font-family: 'Segoe UI Variable Display', 'Inter', 'Google Sans', '微软雅黑';
 
 // 颜色
-@import url('./color.less');
+@import url('@s/color.less');
 
 // 布局
 @wu-layout-radius: 4px;
