--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -1,5 +1,5 @@
 /* 此样式表用于基础初始化
- * Date: 2024-08-29 / Version: 2.0-dev
+ * Date: 2024-11-12 / Version: 2.0-dev
  */
 
 // 全局变量
@@ -18,21 +18,21 @@ body {
     a:hover, a:active, a:visited {
         color: #000;
     }
-    p a {
+    p a, li a {
         position: relative;
         margin-right: 1.2em;
     }
-    p a::after {
+    p a::after, li a::after {
         // 图标取自 fluent:open-xx-filled，大小为 15x15，颜色为 #999
         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 24 24'%3E%3Cpath fill='%23999999' d='M6.25 5C5.56 5 5 5.56 5 6.25v11.5c0 .69.56 1.25 1.25 1.25h11.5c.69 0 1.25-.56 1.25-1.25V14a1 1 0 1 1 2 0v3.75A3.25 3.25 0 0 1 17.75 21H6.25A3.25 3.25 0 0 1 3 17.75V6.25A3.25 3.25 0 0 1 6.25 3H10a1 1 0 1 1 0 2zM14 5a1 1 0 1 1 0-2h6a1 1 0 0 1 1 1v6a1 1 0 1 1-2 0V6.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L17.586 5z'/%3E%3C/svg%3E");
         position: absolute;
         top: .07em;
         right: -1.1em;
     }
-    p a:hover {
+    p a:hover, li a:hover {
         color: @wu-color-blue;
     }
-    p a:hover::after {
+    p a:hover::after, li a:hover::after {
         // 图标取自 fluent:open-xx-filed，大小为 15x15，颜色为 #3078e2
         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 24 24'%3E%3Cpath fill='%233078e2' d='M6.25 5C5.56 5 5 5.56 5 6.25v11.5c0 .69.56 1.25 1.25 1.25h11.5c.69 0 1.25-.56 1.25-1.25V14a1 1 0 1 1 2 0v3.75A3.25 3.25 0 0 1 17.75 21H6.25A3.25 3.25 0 0 1 3 17.75V6.25A3.25 3.25 0 0 1 6.25 3H10a1 1 0 1 1 0 2zM14 5a1 1 0 1 1 0-2h6a1 1 0 0 1 1 1v6a1 1 0 1 1-2 0V6.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L17.586 5z'/%3E%3C/svg%3E");
     }
