build(alias): 弃用@s别名
由于 @ 别名已经启用 (be77b27)，为了项目的代码整洁和规范性，移除 @s 别名，改用 @/styles/*。

Signed-off-by: crrashh1542 <kotsuki@crrashh.com>

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,13 +1,13 @@
 @charset 'utf-8';
 /* 此样式表用于全局的变量设定
- * Date: 2024-08-29 / Version: 2.0-dev
+ * Date: 2024-11-30 / Version: 2.0-dev
  */
 
 // 字体
 @wu-font-family: 'Segoe UI Variable Display', 'Inter', 'Google Sans', '微软雅黑';
 
 // 颜色
-@import url('@s/color.less');
+@import url('@/styles/color.less');
 
 // 布局
 @wu-layout-radius: 4px;
