--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -1,9 +1,9 @@
 /* 此样式表用于基础初始化
- * Date: 2024-11-12 / Version: 2.0-dev
+ * Date: 2024-11-30 / Version: 2.0-dev
  */
 
 // 全局变量
-@import url('@s/global.less');
+@import url('./global.less');
 
 // 文档流初始化
 body {
