--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,8 +1,8 @@
 @charset 'utf-8';
 /* 此样式表用于全局的主题设定
- * Date: 2024-08-29 / Version: 1.2
+ * Date: 2024-11-30 / Version: 1.2
  */
-@import url('@s/color.less');
+@import url('@/styles/color.less');
 
 .color-theme .category {
     color: @wu-color-blue;
