refactor: [view] 重构主页
去除屎山，完全抛弃 FluentUI Web Components 后以组合式语法从头重构了主页！
同时，考虑到部分样式在今后会重复使用，故添加一些常用类和常用变量。

Signed-off-by: crrashh1542 <kotsuki@crrashh.com>

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -47,6 +47,45 @@ body {
     font-weight: 700;
     margin-bottom: 24px;
 }
+.u-box-xs {
+    width: 16px;
+    height: 16px;
+}
+.u-box-s {
+    width: 24px;
+    height: 24px;
+}
+.u-box-m {
+    width: 32px;
+    height: 32px;
+}
+.u-box-l {
+    width: 36px;
+    height: 36px;
+}
+.u-catalog {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 0 0 8px 4px;
+}
+.u-icon {
+    fill: currentColor;
+    vertical-align: middle;
+    padding-bottom: 4px;
+}
 .u-grow {
     flex-grow: 1;
+}
+.u-float-l {
+    float: left;
+}
+.u-float-r {
+    float: right;
+}
+.u-space-l {
+    margin-left: .75em;
+}
+.u-space-r {
+    margin-right: .75em;
 }
